--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "./index.ts",
+        "src": ".src/index.ts",
         "use": "@vercel/node"
       }
     ],
@@ -13,7 +13,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "/index.ts"
+        "dest": "src/index.ts"
       }
     ]
   }
