--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,4 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "src/server.ts",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "api/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "src/server.ts"
-      }
-    ]
+    "rewrites": [{ "source": "/(.*)", "destination": "/src" }]
   }
   
