--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,16 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/src" }]
+    "version": 2,
+    "builds": [
+      {
+        "src": "src/server.ts",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "src/server.ts"
+      }
+    ]
   }
   
