--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
+    "rewrites": [
+      { "source": "/src/(?!api)(.*)", "destination": "/api/$1" }
+    ]
   }
+  
