--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "mongodb": "^2.2.12",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
