--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,15 @@
-{
-    "rewrites": [
-      { "source": "/src/((?!api).*)", "destination": "/api/$1" }
+  {
+    "version": 2,
+    "builds": [
+      {
+        "src": "src/server.ts",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/src(.*)",
+        "dest": "src/server.ts"
+      }
     ]
   }
-  
