--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
       {
-        "src": "src/(.*)",
-        "dest": "src/server.ts"
+        "src": "/(.*)",
+        "dest": "src/"
       }
     ]
   }
