--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
       { "src": "src/*.ts", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/src/$1" }
+      { "src": "/(.*)", "dest": "/index.ts" }
     ]
   }
   
