--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "version": 2,
     "builds": [
-      { "src": "./src/*.ts", "use": "@vercel/node" }
+      { "src": "src/*/*.ts", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "./src/index.ts" }
+      { "src": "/(.*)", "dest": "src/index.ts" }
     ]
   }
   
