--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,20 @@
 {
     "version": 2,
     "builds": [
-      { "src": "src/*/*.ts", "use": "@vercel/node" }
+      {
+        "src": "./index.ts",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "src/index.ts" }
+      {
+        "src": "/api/(.*)",
+        "dest": "api/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/index.ts"
+      }
     ]
   }
   
