--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,15 @@
     "version": 2,
     "builds": [
       {
-        "src": "./index.ts",
+        "src": "src/server.ts",
         "use": "@vercel/node"
       }
     ],
     "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "api/$1"
-      },
+
       {
         "src": "/(.*)",
-        "dest": "/index.ts"
+        "dest": "src/server.ts"
       }
     ]
   }
