--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,12 @@
         "src": "src/*",
         "use": "@vercel/node"
       }
+    ],
+    "routes": [
+      {
+        "src": "/",
+        "dest": "src/server.ts"
+      }
     ]
   }
   
