--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,10 @@
       }
     ],
     "routes": [
+
       {
-        "src": "/",
+        "src": "/(.*)",
         "dest": "src/server.ts"
       }
     ]
   }
-  
