--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,3 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "src/(.*)",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-
-      {
-        "src": "/(.*)",
-        "dest": "src/server.ts"
-      }
-    ]
+    "rewrites": [{ "source": "/src/(.*)", "destination": "/src" }]
   }
