--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-    "rewrites": [{ "source": "/src/(.*)", "destination": "/src" }]
+    "rewrites": [
+        { "source": "/(.*)", "destination": "/src/$1" }
+    ]
   }
+
+ 
+  
