--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,11 @@
-
-{  "version": 2,
-  "builds": [
-    {
-      "src": "backend/api/index.ts",
-      "use": "@now/node"
-    },
-    {
-      "src": "frontend/src/main.tsx",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "backend/api/index.ts"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/frontend/src/main.tsx"
-    }
-  ]
+{
+    "buildCommand": "cd frontend && npm install && npm run build",
+    "outputDirectory": "frontend/dist",
+    "framework": "vite",
+    "rewrites": [
+        {
+            "source": "/api/(.*)",
+            "destination": "/backend/api/index.ts"
+        }
+    ]
 }
