--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/backend/api/index.ts"
+            "destination": "backend/api/index.ts"
         }
     ]
 }
