--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,5 @@
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
     "framework": "vite",
-    "rewrites": [
-        {
-            "source": "/api/(.*)",
-            "destination": "backend/api/index.ts"
-        }
-    ]
+    "rewrites": [{ "source": "/api/(.*)", "destination": "backend/api" }] 
 }
