--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,5 @@
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
     "framework": "vite",
-    "rewrites": [{ "source": "/api/(.*)", "destination": "backend/" }] 
+    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }] 
 }
